# KWN-deformation

./: .gitignore  CMakeLists.txt  KWN_with_deformation.f90  README.md  README_abaqus_libraries.md  README_namelist.txt  a.out  fort.1  fpm.toml  generate_input_fortran.py  input.nml  input.yaml  install.sh  my_project.md  plot_kwn.ipynb  plot_kwn_without_deformation.ipynb  read_input.f90  run_KWN.sh  run_basic_test.sh  run_kwn.sh  test_description.txt  test_descriptions.txt
app/: KWN_with_deformation.f90
doc/lists/: procedures.html  types.html
doc/module/: kwn_initialise.html  kwn_io.html  kwn_model_routines.html  kwn_parameters.html
doc/proc/: calculate_beta_star.html  calculate_dislocation_density.html  calculate_nucleation_rate.html  initialise_model_state.html  initialise_outputs.html  (+2 more)
docs/: index.html  search.html
results/: KWN_parameters_600C_strain_rate0.000E+00.txt  diffusion_coefficient_600C_strain_rate0.000E+00.txt  dislocation_density_600C_strain_rate0.000E+00.txt  initial_precipitation_distribution_600C_strain_rate0.000E+00.txt  vacancies_600C_strain_rate0.000E+00.txt
src/: KWN_data_types.f90  KWN_initialise.f90  KWN_io.f90  KWN_model.f90  KWN_model_functions.f90  KWN_model_routines.f90  KWN_parameters.f90  KWN_precision.f90  KWN_with_deformation.f90  a.out
test/: test_suite1.f90  test_suite2.f90  tester.f90
test_1/: plot_test.ipynb
test_2/: input.yaml  plot_kwn_without_deformation.ipynb
test_3/: input.yaml  plot_test.ipynb
tests/: Untitled.ipynb  convert_weight_to_atomic.m  fort.1  namelist.input  run_KWN.sh  run_basic_test.sh
(+291 files in other folders)
